2016-08-14  Danil Kutkevich  <danil@kutkevich.org>

        * anaconda.go, cmd/ptichka/main.go, configuration.go, ptichka.go:
        Refactor all function to simplify testing.

2016-07-30  Danil Kutkevich  <danil@kutkevich.org>

        * ptichka.go (Fly, getMedia): Downloads all attachments at one time.

2016-07-29  Danil Kutkevich  <danil@kutkevich.org>

        * ptichka.go (Fly): Separate in two package (lib and cmd)
        * ptichka.go (getMedia): Downloads attachments in goroutines.

2016-07-28  Danil Kutkevich  <danil@kutkevich.org>

        * main.go (main, ptichka): Ability to handle multiple accounts
        in parallel.
        * config.go (loadConfig): Load config with multiple accounts.

        * main.go (main): Get path to config from arguments.

2016-07-27  Danil Kutkevich  <danil@kutkevich.org>

        * main.go (main): Replace `gomail` by `jordan-wright/email`.
        Because `jordan-wright/email` is more straightforward.

2016-05-28  Danil Kutkevich  <danil@kutkevich.org>

        * main.go (unrelated_change): Add `RetweetedStatus` to `Tweet` type.

        * anaconda.go (anacondaTweets.toTweets): Fix truncated text.
        Use retweeted text from `retweeted_status` property.

2016-02-04  Danil Kutkevich  <danil@kutkevich.org>

        * anaconda.go (toTweets): Fix medias iteration.

2016-01-31  Danil Kutkevich  <danil@kutkevich.org>

        * main.go (main): feat: Sort tweets by date from oldest to newest.

        * main.go (main): refactor: Logic is responsible for message
        processing is moved to the separate function.

        * anaconda.go (AnacondaTweets): refactor: move here logic related
        to fetch tweets via Anaconda library.

        * filter.go (filterTweets): refactor: move here logic related to
        email sending (should be renamed).

2015-12-28  Danil Kutkevich  <danil@kutkevich.org>

        * main.go (tweetBody): `tweetBody` respects html entities
        for example "&lt;" to become "<".
