@@ -22,7 +22,7 @@ import (
 )
 
 // Version is an package version.
-const Version = "0.6.20"
+const Version = "0.7.0"
 
 // tweet is a simplified anaconda.Tweet.
 type tweet struct {
